--- a/entities.html
+++ b/entities.html
@@ -103,11 +103,11 @@
 
 
     <!-- Defining Entities Section -->
-    <section>
+    <section id="defining">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1 id="defining">Defining Entities</h1>
+                    <h1>Defining Entities</h1>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -190,11 +190,11 @@
 
 
     <!-- Using Entity Section -->
-    <section>
+    <section id="using">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1 id="using">Using the entity with php</h1>
+                    <h1>Using the entity with php</h1>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -237,11 +237,11 @@
 
 
     <!-- Adding attributes Section -->
-    <section>
+    <section id="attributes">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1 id="attributes">Adding attributes</h1>
+                    <h1>Adding attributes</h1>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -332,11 +332,11 @@
 
 
     <!-- Adding index Section -->
-    <section>
+    <section id="addingIndex">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1 id="addingIndex">Adding indexes</h1>
+                    <h1>Adding indexes</h1>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -373,11 +373,11 @@
 
 
     <!-- Delimiting Section -->
-    <section>
+    <section id="delimiting">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1 id="delimiting">Delimiting an entity</h1>
+                    <h1>Delimiting an entity</h1>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -487,11 +487,11 @@
 
 
     <!-- In memory replication -->
-    <section>
+    <section id="inmemory">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1 id="inmemory">In Memory replication with MySQL</h1>
+                    <h1>In Memory replication with MySQL</h1>
                     <hr class="star-primary">
                 </div>
             </div>
