--- a/index.html
+++ b/index.html
@@ -93,6 +93,29 @@
         </div>
     </header>
 
+    <section id="content">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Content</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="col-lg-8 col-lg-offset-2 text-center">
+                        <p>
+                            <a href="#overview">Overview</a><br/>
+                            <a href="#Installation">Installation</a><br/>
+                            <a href="#hello">Hello World</a><br/>
+                            <a href="#console">Console commands</a><br/>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="overview">
         <div class="container">
             <div class="row">
@@ -142,7 +165,7 @@
     </section>
 
     <!-- Installation Section -->
-    <section class="success">
+    <section class="success" id="Installation">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -170,7 +193,7 @@ vendor/bin/siesta init
 
 
     <!-- Hello world  -->
-    <section>
+    <section id="hello">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
